# SkyScript

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SkyScript.esp  TODO.md  chick.json  dude.json  run_interpreter_specs.bat  run_parser_specs.bat  run_tests.bat  script.yaml  skyrimse.ppj  skyscript.bat  test copy 2.json  test copy 3.json  test.json  vcpkg-configuration.json  vcpkg.json
MyItems/: CowbowHat.json
Scripts/: FormHelper.pex  SkyScript.pex  SkyScriptActionHandler.pex  SkyScriptClassParser.pex  SkyScriptConfig.pex  SkyScriptConsoleCommand.pex  SkyScriptContext.pex  SkyScriptEvents.pex  SkyScriptLock.pex  SkyScriptTypes.pex  SkyScriptUtil.pex  SkyrimScripting_Thread0.pex  SkyrimScripting_Thread1.pex  SkyrimScripting_Thread2.pex  SkyrimScripting_Thread3.pex  SkyrimScripting_Thread4.pex  SkyrimScripting_Thread5.pex  SkyrimScripting_Thread6.pex  SkyrimScripting_Thread7.pex  SkyrimScripting_Thread8.pex  SkyrimScripting_Thread9.pex  _SkyScript_ActionHandler_Activate.pex  _SkyScript_ActionHandler_AddItem.pex  _SkyScript_ActionHandler_AddSpell.pex  _SkyScript_ActionHandler_BlackScreen.pex  _SkyScript_ActionHandler_Cast.pex  _SkyScript_ActionHandler_ChooseSpells.pex  _SkyScript_ActionHandler_Concat.pex  _SkyScript_ActionHandler_Console.pex  _SkyScript_ActionHandler_ConsoleCmd.pex  _SkyScript_ActionHandler_Container.pex  _SkyScript_ActionHandler_EditArmor.pex  _SkyScript_ActionHandler_Equal.pex  _SkyScript_ActionHandler_Equip.pex  _SkyScript_ActionHandler_Exists.pex  _SkyScript_ActionHandler_FlashUI.pex  _SkyScript_ActionHandler_For.pex  _SkyScript_ActionHandler_Get.pex  _SkyScript_ActionHandler_GetForm.pex  _SkyScript_ActionHandler_Global.pex  (+71 more)
Scripts/Source/: FormHelper.psc  SkyScript.psc  SkyScriptActionHandler.psc  SkyScriptConsoleCommand.psc  SkyScriptContext.psc  SkyScriptLock.psc  SkyScriptTypes.psc  SkyScriptUtil.psc  _SkyScript_ActionHandler_Activate.psc  _SkyScript_ActionHandler_Add.psc  _SkyScript_ActionHandler_AddItem.psc  _SkyScript_ActionHandler_AddSpell.psc  _SkyScript_ActionHandler_BlackScreen.psc  _SkyScript_ActionHandler_Cast.psc  _SkyScript_ActionHandler_ChooseSpells.psc  _SkyScript_ActionHandler_Concat.psc  _SkyScript_ActionHandler_Console.psc  _SkyScript_ActionHandler_ConsoleCmd.psc  _SkyScript_ActionHandler_Container.psc  _SkyScript_ActionHandler_EditArmor.psc  _SkyScript_ActionHandler_Equal.psc  _SkyScript_ActionHandler_Equip.psc  _SkyScript_ActionHandler_Exists.psc  _SkyScript_ActionHandler_FlashUI.psc  _SkyScript_ActionHandler_For.psc  _SkyScript_ActionHandler_Get.psc  _SkyScript_ActionHandler_GetForm.psc  _SkyScript_ActionHandler_Global.psc  _SkyScript_ActionHandler_If.psc  _SkyScript_ActionHandler_Ignore.psc  _SkyScript_ActionHandler_Inventory.psc  _SkyScript_ActionHandler_IsType.psc  _SkyScript_ActionHandler_Kill.psc  _SkyScript_ActionHandler_ListFiles.psc  _SkyScript_ActionHandler_Load.psc  _SkyScript_ActionHandler_LoadFile.psc  (+53 more)
cmake/: specs.cmake  yaml.cmake
examples/: Dog.json  Dog.yaml  hello.yaml  import.yaml  print.yaml
parser/: CMakeLists.txt
runner/: CMakeLists.txt  main.cpp
spec/: CMakeLists.txt  specHelper.cpp  specHelper.h
spec/interpreter/: CMakeLists.txt  ClassDefinitionSpec.h  ContextSpec.cpp  ContextSpec.h  FunctionDefinitionSpec.cpp  FunctionDefinitionSpec.h  FunctionInvocationSpec.h  NativeFunctionSpec.h  PapyrusFunctionSpec.h  SyntaxErrorsSpec.h  TypedValueSpec.h  TypesSpec.h  VariableDeclarationAndAssignmentSpec.cpp  VariableDeclarationAndAssignmentSpec.h  VariablesSpec.h  main.cpp  specHelper.h
spec/interpreter/functions/: ClassSpec.h  ForEachSpec.h  IfSpec.h  ImportSpec.h  PrintSpec.h  TestLogSpec.h
spec/parser/: CMakeLists.txt  ParserSpec.cpp  SkyScriptNodeSpec.h  YAMLParserSpec.cpp  YAMLParserSpec.h  main.cpp  specHelper.h
src/: CMakeLists.txt  SkyScript.h  SkyScriptAPI.cpp  SpellsTests.h  Tests.h  main.cpp  main.h
stdlib/: Object.yaml  class.yaml  define_type.yaml  int.yaml  object.yaml  string.yaml
stdlib/yaml/: class.yaml
test/: CMakeLists.txt  TestHelper.h  Tests.cpp
test/SkyScriptTests/: CMakeLists.txt  HelloWorld.cpp  SkyScriptTest.cpp
test/integration/: CMakeLists.txt  ExpandoFromYamlTest.h  ParsingClassDefinitionsTest.h  ParsingClassDefinitionsTest.h.bak  ParsingFunctionsTest.h  ParsingFunctionsTest.h.bak  ScriptFileTest.h  TestHelper.h  Tests.cpp  VariablesDeclarationTest.h
test/testfoo/: CMakeLists.txt  testfoo.cpp  testfoo.h
test/unit/: CMakeLists.txt  ExpandoTest.h  FunctionInfoTest.h  HelloTest.h  NativeFunctionRegistrationTest.h  ParsingIntoScriptNodesTest.h  TestHelper.h  Tests.cpp  TypeInfoTest.h
v4_Scripts/: FormHelper.pex  SkyScript.pex  SkyScriptActionHandler.pex  SkyScriptConfig.pex  SkyScriptLock.pex  TODO.md  _SkyScript_ActionHandler_Activate.pex  _SkyScript_ActionHandler_Add.pex  _SkyScript_ActionHandler_AddItem.pex  _SkyScript_ActionHandler_Cast.pex  _SkyScript_ActionHandler_ChooseSpells.pex  _SkyScript_ActionHandler_EditArmor.pex  _SkyScript_ActionHandler_Equal.pex  _SkyScript_ActionHandler_Equip.pex  _SkyScript_ActionHandler_FlashUI.pex  _SkyScript_ActionHandler_Get.pex  _SkyScript_ActionHandler_GetForm.pex  _SkyScript_ActionHandler_IsType.pex  _SkyScript_ActionHandler_Load.pex  _SkyScript_ActionHandler_Math.pex  _SkyScript_ActionHandler_Msg.pex  _SkyScript_ActionHandler_MsgBox.pex  _SkyScript_ActionHandler_New.pex  _SkyScript_ActionHandler_Print.pex  _SkyScript_ActionHandler_Remove.pex  _SkyScript_ActionHandler_RemoveSpell.pex  _SkyScript_ActionHandler_Run.pex  _SkyScript_ActionHandler_SetName.pex  _SkyScript_ActionHandler_SetOwned.pex  _SkyScript_ActionHandler_Switch.pex  _SkyScript_ActionHandler_TypeOf.pex  _SkyScript_ActionHandler_Var.pex  _SkyScript_ActionHandler_Vars.pex  _SkyScript_Files.pex  _SkyScript_Log.pex  _SkyScript_PlayerScript.pex  _SkyScript_Thread.pex  _SkyScript_Thread1.pex  _SkyScript_Thread5.pex  _SkyScript_Thread6.pex  (+6 more)
(+138 files in other folders)
